--- a/templates/backOffice/default/shoppingfeed/include/config_tab_mapping.html
+++ b/templates/backOffice/default/shoppingfeed/include/config_tab_mapping.html
@@ -28,7 +28,7 @@
                             {form_field form=$form field="module_id"}
                                 <div class="form-group">
                                     <label for="{$name}"></label>
-                                    <select class="form-control" name="{$name}" id="{$label_attr.for}">
+                                    <select class="form-control" name="{$name}" id="{$label_attr.for|default:null}">
                                         <option value="">{intl l="-- Select a delivery module --"}</option>
                                         {foreach $choices as $module}
                                             <option value="{$module->value}" {if $mapping->getModuleId()=={$module->value}}selected{/if}>{$module->label}</option>
@@ -104,7 +104,7 @@
                     </th>
                     <th class="col-md-6">
                         {form_field form=$form field="module_id"}
-                                <select class="form-control" name="{$name}" id="{$label_attr.for}">
+                                <select class="form-control" name="{$name}" id="{$label_attr.for|default:null}">
                                     <option value="">{intl l="-- Select a delivery module --"}</option>
                                     {foreach $choices as $module}
                                         <option value="{$module->value}">{$module->label}</option>
